@@ -2076,3 +2076,5 @@
 * pheno:   Lua API: fixed a bug where gclient entity fields are not available
            on et_ClientConnect() callback
 * pheno:   fixed broken FF voting
+* pheno:   Lua API: load API from external library
+* pheno:   fixed !rename if player has reached max name changes
